fix: some spacings pixel perfect

--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -40,7 +40,7 @@
     border-radius: 6px;
 
     position: relative;
-    top: 0px;
+    top: -50px;
     z-index: 2;
 
     box-shadow: 0px 4px 64px rgba(15, 10, 31, 0.1);
@@ -60,12 +60,14 @@
       .div-number {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         gap: 4px;
 
         .number-span {
           font-size: 16px;
           color: var(--brand-purple-light);
+          text-align: center;
         }
       }
     }
