--- a/css/styles.css
+++ b/css/styles.css
@@ -380,7 +380,7 @@ img {
   background: var(--gray-white);
   border-radius: 6px;
   position: relative;
-  top: 0px;
+  top: -50px;
   z-index: 2;
   -webkit-box-shadow: 0px 4px 64px rgba(15, 10, 31, 0.1);
           box-shadow: 0px 4px 64px rgba(15, 10, 31, 0.1);
@@ -413,6 +413,9 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -422,6 +425,7 @@ img {
 #hero-section .hero-numbers .hero-numbers-content .div-number .number-span {
   font-size: 16px;
   color: var(--brand-purple-light);
+  text-align: center;
 }
 
 @media screen and (max-width: 1024px) {
